# otus-cpp

./: CMakeLists.txt  MyAllocator.hpp  MyContainer.hpp  ip_filter.cpp  main.cpp  version.hpp.in
.github/workflows/: 02_homework.yaml  release.yaml
tests/: test_version.cpp
